<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Recinto extends Model
{
    protected $fillable = [
        'name',
        'capacidad',
        'description',
    ];

    public function animalrecintos()
    {
        return $this->hasMany('App\Models\AnimalRecinto','recinto_id');
    }

    public function especies()
    {
        return $this->hasMany('App\Models\Especie','recinto_id');
    }
}
